# open_gov_access

./: .env.example  .firebaserc  .gitignore  HTML_TO_MARKDOWN_README.md  Makefile  QUICKSTART.md  README.md  RUNNING.md  demo_html_to_markdown.py  docker-compose.yml  firebase.json  html_to_markdown.py  parse_transcript.py  requirements_html2md.txt  setup.sh  summery_trascript_1.xml  transcript_to_markdown.py
backend/: .env.example  ALEMBIC_GUIDE.md  ALEMBIC_SETUP.md  Dockerfile  EXAMPLE_DATA.md  README.md  alembic.ini  config.py  demo_example_data.py  main.py  output.md  pyproject.toml  requirements.txt  test.ipynb  test_legistar_scraper.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_11_08_2016-30c145fd0efb_initial_database_schema.py  2025_11_09_0001-add_metadata_to_documents.py  2025_11_09_0002-add_meeting_link_to_documents.py  2025_11_09_1242-9e8a619e75bf_.py  2025_11_09_1253-372e7eb1fea3_.py  2025_11_09_1300-3b953b8de0dd_.py  2025_11_09_1320-14f60836fd82_.py  2025_11_09_1320-c0a7b6d2edc5_merge_migration_branches.py  2025_11_09_1351-445b48d2a57d_.py  2025_11_09_1355-a04311838dcc_.py
backend/api/: admin.py  main.py
backend/etl/: pipeline.py
backend/models/: database.py
backend/scrapers/: __init__.py  base.py  legistar.py  sfbos.py
backend/transcripts/: transcript4.txt  transcript5.txt
backend/utils/: __init__.py  llm.py  parse_meeting_narrative.py  transcript_parser.py
data/: legesliations_sample.xls  officials.json  votes_sample.xls
docs/: ARCHITECTURE.txt  IMPLEMENTATION_SUMMARY.md  PROJECT_GUIDE.md  SUMMARY.md  SYSTEM_DIAGRAM.md  (+3 more)
(+68 files in other folders)
